@@ -291,6 +291,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 5817) Special:Recentchangeslinked now shows red link for nonexistent
   target page instead of silently redirecting
 * (bug 8914) Don't transform colons in {{anchorencode:}}
+* (bug 9241) Handle edit section links and include size links for cached
+  templates the same as the first transclusion.
  
 == Maintenance ==
 * New script maintenance/language/checkExtensioni18n.php used to check i18n
